--- a/templates/test.html
+++ b/templates/test.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+   
 </head>
 <body>
-   <h1>this is header</h1> 
-   <p>first paragraph</p>
+    <h1>html second page</h1>
 </body>
 </html>
